--- a/latex/robos/robos.tex
+++ b/latex/robos/robos.tex
@@ -5,11 +5,11 @@ No Encontro de Robôs Inteligentes do Rio de Janeiro, haverá uma pequena competiç
 
 Vários labirintos diferentes já foram criados, porém ninguém sabe ao certo quantos tesouros são coletáveis em cada um deles. O organizador dessa competição, o Sr. Filomeno Fludêncio, está muito ocupado procurando patrocínio e divulgando o evento, e por isso pediu a sua ajuda para contar os tesouros.
 
-Dado um mapa de um labirinto com a posição do robô e as posições de ``tesouros'' espalhados pelo labirinto, o seu programa deve imprimir quantos tesouros podem ser coletados a partir da posição inicial. Um tesouro pode ser coletado apenas se o robô consegue alcançar sua posição através de movimentos para norte, sul, leste ou oeste, em qualquer quantidade ou ordem, passando apenas por posições livres. A borda mais externa do labirinto sempre conterá paredes, dessa forma, o robô nunca se perca, saindo do labirinto.
+Dado um mapa de um labirinto com a posição do robô e as posições de ``tesouros'' espalhados pelo labirinto, o seu programa deve imprimir quantos tesouros podem ser coletados a partir da posição inicial. Um tesouro pode ser coletado apenas se o robô consegue alcançar sua posição através de movimentos para norte, sul, leste ou oeste, em qualquer quantidade ou ordem, passando apenas por posições livres. A borda mais externa do labirinto sempre conterá paredes para que, dessa forma, o robô nunca se perca, saindo do labirinto.
 \end{descricao}
 
 \begin{entrada}
-A entrada é composta por diversas instâncias. Cada uma das instâncias começa com dois inteiros $3 \leq m, n \leq 1000$, respectivamente o comprimento e a largura de um labirinto. As $m$ linhas seguintes descrevem o labirinto e contêm $n$ caracteres cada uma. Cada caractere `\#' representa uma parede, ou seja, uma posição que não pode ser ocupada pelo robô, ao contrário das posições ocupadas pelo caractere `.' (ponto). Um caractere `\$' representa um tesouro e um caractere `$I$' representa a posição inicial do robô. A entrada termina com um par de inteiros $m, n$ com $m=n=0$. Este caso não deve ser processado.
+A entrada é composta por diversas instâncias. Cada uma das instâncias começa com dois inteiros $3 \leq m, n \leq 1000$, respectivamente o comprimento e a largura de um labirinto. As $m$ linhas seguintes descrevem o labirinto e contêm $n$ caracteres cada uma. Cada caractere `\#' representa uma parede, ou seja, uma posição que não pode ser ocupada pelo robô, ao contrário das posições ocupadas pelo caractere `.' (ponto). Um caractere `\$' representa um tesouro e um caractere `$I$' representa a posição inicial do robô. Haverá exatamente um caracter `$I$' em cada instância. A entrada termina com um par de inteiros $m, n$ com $m=n=0$. Este caso não deve ser processado.
 \end{entrada}
 
 \begin{saida}
