Mudança de nome do senhor Filomeno.

--- a/latex/robos/robos.tex
+++ b/latex/robos/robos.tex
@@ -3,7 +3,7 @@
 \begin{descricao}
 No Encontro de Robôs Inteligentes do Rio de Janeiro, haverá uma pequena competição de programação de robôs. Nessa competição, cada time participante deverá programar seu robô para percorrer um labirinto cheio de tesouros. O time vencedor será aquele cujo robô conseguir coletar o maior número de tesouros.
 
-Vários labirintos diferentes já foram criados, porém ninguém sabe ao certo quantos tesouros são coletáveis em cada um deles. O organizador dessa competição, o Sr. Filomeno Fludêncio, está muito ocupado procurando patrocínio e divulgando o evento, e por isso pediu a sua ajuda para contar os tesouros.
+Vários labirintos diferentes já foram criados, porém ninguém sabe ao certo quantos tesouros são coletáveis em cada um deles. O organizador dessa competição, o Sr. Benício Prantos, está muito ocupado procurando patrocínio e divulgando o evento, e por isso pediu a sua ajuda para contar os tesouros.
 
 Dado um mapa de um labirinto com a posição do robô e as posições de ``tesouros'' espalhados pelo labirinto, o seu programa deve imprimir quantos tesouros podem ser coletados a partir da posição inicial. Um tesouro pode ser coletado apenas se o robô consegue alcançar sua posição através de movimentos para norte, sul, leste ou oeste, em qualquer quantidade ou ordem, passando apenas por posições livres. A borda mais externa do labirinto sempre conterá paredes para que, dessa forma, o robô nunca se perca, saindo do labirinto.
 \end{descricao}
