Compilação com fontes melhores no latex.

--- a/latex/prova.tex
+++ b/latex/prova.tex
@@ -3,10 +3,12 @@
 \usepackage[dvips]{graphicx}
 \usepackage[portuguese]{babel}
 \usepackage[latin1]{inputenc}
-\usepackage[T1]{fontenc}
 \usepackage[all]{xy}
 \usepackage{problemas}
-\usepackage{mathptmx}
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
+%\usepackage{ae,aecompl}
+%\usepackage{times}
 
 \begin{document}
 
