[hipertenusa, robos] Pequenos ajustes no texto do enunciado

--- a/latex/hipertenusa/hipertenusa.tex
+++ b/latex/hipertenusa/hipertenusa.tex
@@ -1,11 +1,11 @@
 \problema{(Hipertenusa)}
 
 \begin{descricao}
-Joe Nísio atualmente cursa a disciplina Estudando Retas e Inteiros. Nessa disciplina, são abordadas as relações entre números inteiros e a geometria inerente a eles. Na primeira aula foram estudados triângulos pitagóricos, triângulos retângulos que possuem seus três lados, os dois catetos e a hipotenusa, como números inteiros. Além disso, o professor Pablo Topázio mostrou que números que são hipotenusas de algum triângulo retângulo satisfazem uma série de propriedades.
+Joe Nísio atualmente cursa a disciplina Estudos de Retas e Inteiros. Nessa disciplina, são abordadas as relações entre números inteiros e a geometria inerente a eles. Na primeira aula foram estudados triângulos pitagóricos, triângulos retângulos que possuem seus três lados, os dois catetos e a hipotenusa, como números inteiros. Além disso, o professor Pablo Topázio mostrou que números que são hipotenusas de algum triângulo retângulo satisfazem uma série de propriedades.
 
 Joe, muito interessado e criativo, se fez a seguinte pergunta: quais seriam os números inteiros que são o quadrado da hipotenusa de pelo menos dois triângulos retângulos distintos com catetos inteiros? Ele batizou um número que satisfaz essa propriedade de hipertenusa. Por exemplo, $50$ é uma hipertenusa, uma vez que $50 = 1^2 + 7^2 = 5^2 + 5^2$.
 
-Interessado em obter uma resposta para essa pergunta, ele conversou com Hiago Bota e Pérola Silvia, seus companheiros de time da maratona de triangulação (uma competição exótica onde times de três pessoas devem resolver problemas sobre triângulos em uma determinada quantidade de tempo), e pediu-os para ajudá-lo a escrever um programa respondesse ao questionamento. Ao descobrir que não sabem resolver esse problema e receosos que algo parecido acabe aparecendo na próxima maratona de triangulação, eles pediram que você os ajudasse.
+Interessado em obter uma resposta para essa pergunta, ele conversou com Hiago Bota e Pérola Silvia, seus companheiros de time da maratona de triangulação (uma competição exótica onde times de três pessoas devem resolver problemas sobre triângulos em uma determinada quantidade de tempo), e pediu-os para ajudá-lo a escrever um programa que respondesse ao questionamento. Ao descobrir que não sabem resolver esse problema e receosos de que algo parecido acabe aparecendo na próxima maratona de triangulação, eles pediram que você os ajudasse.
 \end{descricao}
 
 \begin{entrada}
