Todos os enunciados revisados, faltam alguns detalhes comentados no e-mail, e falta revisar os samples.

--- a/latex/fracoes/fracoes.tex
+++ b/latex/fracoes/fracoes.tex
@@ -1,7 +1,7 @@
 \problema{(Frações Equivalentes)}
 
 \begin{descricao}
-Um professor da disciplina Estudando Racionais e Irracionais, ERI, dá aula sobre frações para seus alunos. A próxima aula será sobre frações equivalentes e ele gostaria de ter um programa para os alunos brincarem com os números. Como ele não sabe programar, ele pediu que você fizesse um programa que decidisse se duas frações são equivalentes. Para te ajudar na tarefa ele lhe deu uma dica de como verificar se duas frações são equivalentes. Dizemos que $\frac{x}{y}$ e $\frac{z}{w}$ são equivalentes se $x\times w = y\times z$.
+Um professor da disciplina Estudos de Racionais e Irracionais, ERI, dá aula sobre frações para seus alunos. A próxima aula será sobre frações equivalentes, e ele gostaria de ter um programa para os alunos brincarem com os números. Como ele não sabe programar, pediu que você fizesse um programa que decidisse se duas frações são equivalentes. Para ajudar nesta tarefa, ele lhe deu uma dica de como verificar se duas frações são equivalentes. Dizemos que $\frac{x}{y}$ e $\frac{z}{w}$ são equivalentes se $x\times w = y\times z$.
 \end{descricao}
 
 \begin{entrada}
