--- a/latex/barras/barras.tex
+++ b/latex/barras/barras.tex
@@ -3,7 +3,7 @@
 \begin{descricao}
 Códigos de barra são largamente utilizados em diversos setores da indústria e comércio. Um dos códigos mais utilizados é o UPC, Universal Product Code, que possibilita o armazenamento de 12 dígitos decimais em cada código. Sua representação é feita utilizando um código binário e leva em consideração diversos fatores relacionados à confiabilidade do valor lido. Barras verticais representam bits $1$ e espaços em branco representam bits $0$.
 
-Cada código de barras é composto por 5 partes. A primeira delas contém um código de controle $101$. A segunda parte, chamada padrão esquerdo, codifica os 6 primeiros dígitos do valor representado. Cada um desses dígitos é representado por uma string de 7 bits. A seguir, há uma outra string de controle, $01010$, que sinaliza o centro do código de barras. A quarta parte, denomidada padrão direito, codifica os outros 6 dígitos. Finalmente, a quinta e última parte contém também uma string de controle $101$, como a string original. Cada número codificado resulta em uma string de $3+6\times7+5+6\times7+3 = 95$ bits. Os códigos de cada dígito decimal para o padrão esquerdo e o padrão direito são fornecidos na tabela a seguir.
+Cada código de barras é composto por 5 partes. A primeira delas contém um código de controle $101$. A segunda parte, chamada padrão esquerdo, codifica os 6 primeiros dígitos do valor representado. Cada um desses dígitos é representado por uma string de 7 bits. A seguir, há uma outra string de controle, $01010$, que sinaliza o centro do código de barras. A quarta parte, denomidada padrão direito, codifica os outros 6 dígitos. Finalmente, a quinta e última parte contém também uma string de controle $101$, como a string inicial. Cada número codificado resulta em uma string de $3+6\times7+5+6\times7+3 = 95$ bits. Os códigos de cada dígito decimal para o padrão esquerdo e para o padrão direito são fornecidos na tabela a seguir.
 
 \begin{table}[htb] % [htb]-> here, top, bottom
    \centering   % tabela centralizada
@@ -29,7 +29,7 @@ Cada código de barras é composto por 5 partes. A primeira delas contém um código
 %   \label{tab:Referencia_desejada}
 \end{table}
 
-Neste problema, dado um código de barras, você deverá decodificá-lo e fornecer o número representado ou informar que o código foi lido incorretamente. Observe que não há distinção entre início e fim do código, então seu programa deve ser capaz de decodificar o código de barras mesmo que este tenha sido lido de cabeça para baixo.
+Neste problema, dado um código de barras, você deverá decodificá-lo e fornecer o número por ele representado, ou informar que o código foi lido incorretamente. Observe que não há distinção entre início e fim do código, então seu programa deve ser capaz de decodificar o código de barras mesmo que este tenha sido lido de cabeça para baixo.
 
 \end{descricao}
 
@@ -39,7 +39,7 @@ A entrada é descrita por um inteiro positivo $N$ na primeira linha, indicando o 
 \end{entrada}
 
 \begin{saida}
-Para cada código de barra, deve ser impresso o número de 12 dígitos codificado. Caso haja algum erro na string, deve ser impressa a string XXXXXXXXXXXX.
+Para cada código de barra, deve ser impresso o número de 12 dígitos codificado. Caso haja algum erro no código, deve ser impressa a string XXXXXXXXXXXX.
 \end{saida}
 
 \exemplos{0.54}{0.40}
