--- a/latex/contando/contando.tex
+++ b/latex/contando/contando.tex
@@ -5,11 +5,11 @@ Dada uma lista de $k$ números primos e dois números inteiros $m$ e $n$, quantos 
 \end{descricao}
 
 \begin{entrada}
-A entrada será composta por vários casos de teste. A primeira linha de cada caso de teste contém os três números inteiros $2 \leq k \leq 20$, $1 \leq m \leq 100000000$ e $1 \leq n \leq k$. A segunda e última linha de cada caso de teste contém k números primos, $p_1, p_2, ..., p_k \leq 1000000$. A entrada termina com uma linha com $k=m=n=0$, que não deve ser processada.
+A entrada é composta por vários casos de teste. A primeira linha de cada caso de teste contém os três números inteiros $2 \leq k \leq 20$, $1 \leq m \leq 100000000$ e $1 \leq n \leq k$. A segunda e última linha de cada caso de teste contém k números primos, $p_1, p_2, ..., p_k \leq 1000000$. A entrada termina com uma linha com $k=m=n=0$, que não deve ser processada.
 \end{entrada}
 
 \begin{saida}
-Para cada caso de teste, deve ser impressa a quantidade de inteiros positivos menores ou iguais a $m$ divisíveis por exatamente $2$ dos inteiros.
+Para cada caso de teste, deve ser impressa a quantidade de inteiros positivos menores ou iguais a $m$ divisíveis por exatamente $n$ dos inteiros.
 \end{saida}
 
 \exemplos{0.47}{0.47}
