Feitas as correções sugeridas pelo Denilson

--- a/latex/contando/contando.tex
+++ b/latex/contando/contando.tex
@@ -1,11 +1,11 @@
 \problema{(Contando Múltiplos)}
 
 \begin{descricao}
-Dada uma lista de $k$ números primos e dois números inteiros $m$ e $n$, quantos números inteiros positivos menores ou iguais a $m$ são divisíveis exatamente por $n$ dos números primos dados?
+Dada uma lista de $k$ números primos distintos e dois números inteiros $m$ e $n$, quantos números inteiros positivos menores ou iguais a $m$ são divisíveis exatamente por $n$ dos números primos dados?
 \end{descricao}
 
 \begin{entrada}
-A entrada é composta por vários casos de teste. A primeira linha de cada caso de teste contém os três números inteiros $2 \leq k \leq 20$, $1 \leq m \leq 100000000$ e $1 \leq n \leq k$. A segunda e última linha de cada caso de teste contém k números primos, $p_1, p_2, ..., p_k \leq 1000000$. A entrada termina com uma linha com $k=m=n=0$, que não deve ser processada.
+A entrada é composta por vários casos de teste. A primeira linha de cada caso de teste contém os três números inteiros $2 \leq k \leq 20$, $1 \leq m \leq 100000000$ e $1 \leq n \leq k$. A segunda e última linha de cada caso de teste contém k números primos distintos, $p_1, p_2, ..., p_k \leq 1000000$. A entrada termina com uma linha com $k=m=n=0$, que não deve ser processada.
 \end{entrada}
 
 \begin{saida}
