--- a/latex/fracoes/fracoes.tex
+++ b/latex/fracoes/fracoes.tex
@@ -9,7 +9,7 @@ A primeira linha da entrada contém um inteiro positivo $N$ ($N \leq 1000$). Cada
 \end{entrada}
 
 \begin{saida}
-Para cada quádrupla $x$, $y$, $z$, $w$, você deve imprimir uma linha contendo ``SIM'' caso as frações sejam equivalentes e ``NAO'' (sem acento) em caso contrário.
+Para cada quádrupla $x$, $y$, $z$, $w$, você deve imprimir uma linha contendo ``SIM'' caso as frações sejam equivalentes e ``NAO'', sem acentuação, em caso contrário.
 \end{saida}
 
 \exemplos{0.47}{0.47}
