--- a/latex/hipertenusa/hipertenusa.tex
+++ b/latex/hipertenusa/hipertenusa.tex
@@ -13,7 +13,7 @@ A entrada é composta por diversas linhas de entrada. A primeira linha contém um 
 \end{entrada}
 
 \begin{saida}
-Para cada linha da entrada deve ser impresso ``sim'', caso o número seja uma hipertenusa e ``nao'' caso contrário.
+Para cada linha da entrada deve ser impressa a palavra ``SIM'', caso o número seja uma hipertenusa, e a palavra ``NAO'', sem acentuação, em caso contrário.
 \end{saida}
 
 \exemplos{0.47}{0.47}
