Tinha esquecido de mudar o sample também...

--- a/latex/hipertenusa/hipertenusa.tex
+++ b/latex/hipertenusa/hipertenusa.tex
@@ -23,10 +23,10 @@ Para cada linha da entrada deve ser impressa a palavra ``SIM'', caso o número se
 50	\pl
 51
 }
-{nao	\pl
-nao	\pl
-sim	\pl
-nao
+{NAO	\pl
+NAO	\pl
+SIM	\pl
+NAO
 }
 
 %\pb
