Correção de erro de digitação no "Jogo da Virada"

--- a/latex/virada/virada.tex
+++ b/latex/virada/virada.tex
@@ -3,7 +3,7 @@
 \begin{descricao}
 A filial carioca da Entidade Recreativa Internacional, ERI-RJ, está promovendo um velho jogo: o Jogo da Virada, um jogo de quebra-cabeça que exige um pouco de raciocínio. Para distribuí-lo, é necessário criar uma série de configurações iniciais do jogo. O ideal é que as configurações fossem tão diversas quanto possível, mas todas as configurações deveriam ser resolvíveis. Infelizmente, nenhum membro da ERI-RJ é muito bom no jogo, e têm sido difícil decidir, para cada configuração, se existe uma solução. Como você é um bom resolvedor de problemas, você é a única esperança de se agilizar o proceso de verificação das configurações.
 
-O jogo consiste de peças circulares dispostas em uma linha reta. Cada uma das peças circulares possui duas cores, preto e branco, cada cor em um dos lados. A cada lance do jogo, uma peça deve ser removida. Entretando, uma peça só pode ser removida caso esteja com o lado preto para cima. Ao removermos uma peça, cada uma de suas duas peças vizinhas (se existirem e ainda não tiverem sido removidas), são viradas, de forma que sua cor seja alterada. Uma configuração é dita "válida" se existe uma solução, um seja, uma sequência de passos que consiga remover todas as peças. Sua tarefa é criar um programa que diga, para cada configuração, se ela é válida. Na figura, é possível visualizar uma sequência de passos que resolve uma configuração inicial. Esta figura representa a configuração do primeiro caso de teste no exemplo.
+O jogo consiste de peças circulares dispostas em uma linha reta. Cada uma das peças circulares possui duas cores, preto e branco, cada cor em um dos lados. A cada lance do jogo, uma peça deve ser removida. Entretando, uma peça só pode ser removida caso esteja com o lado preto para cima. Ao removermos uma peça, cada uma de suas duas peças vizinhas (se existirem e ainda não tiverem sido removidas), são viradas, de forma que sua cor seja alterada. Uma configuração é dita ``válida'' se existe uma solução, um seja, uma sequência de passos que consiga remover todas as peças. Sua tarefa é criar um programa que diga, para cada configuração, se ela é válida. Na figura, é possível visualizar uma sequência de passos que resolve uma configuração inicial. Esta figura representa a configuração do primeiro caso de teste no exemplo.
 
 
 \begin{center}
