Especificação de raios máximos no pizza.

--- a/latex/pizza/pizza.tex
+++ b/latex/pizza/pizza.tex
@@ -9,7 +9,7 @@ O os alunos do curso comunitário de culinária ``Experimentando Receitas Italiana
 \end{descricao}
 
 \begin{entrada}
-A entrada é composta por diversas instâncias do problema. Cada instância é composta por 3 linhas. A primeira linha contém 2 números inteiros, $m$ e $n$, $1 \leq m \leq 1000000$, $1 \leq n \leq 1000000$, representando as quantidades de pizzas e de pratos, respectivamente. A segunda linha contém m números inteiros, indicando os raios das pizzas. A terceira linha contém n números inteiros, contendo os raios dos pratos. A entrada termina quando $m=n=0$. Essa instância não deve ser processada.
+A entrada é composta por diversas instâncias do problema. Cada instância é composta por 3 linhas. A primeira linha contém 2 números inteiros, $m$ e $n$, $1 \leq m \leq 1000000$, $1 \leq n \leq 1000000$, representando as quantidades de pizzas e de pratos, respectivamente. A segunda linha contém m números inteiros, indicando os raios das pizzas. A terceira linha contém n números inteiros, contendo os raios dos pratos. Todos os raios menores ou iguais a $10000$. A entrada termina quando $m=n=0$. Essa instância não deve ser processada.
 \end{entrada}
 
 \begin{saida}
